--- a/project/app/src/main/res/layout/activity_new_post.xml
+++ b/project/app/src/main/res/layout/activity_new_post.xml
@@ -46,7 +46,7 @@
         android:layout_height="200dp"
         android:layout_marginStart="99dp"
         android:ems="10"
-        android:hint="Title"
+        android:hint="Content"
         android:inputType="textPassword"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_username_modify"
