--- a/project/app/src/main/res/layout/post_item.xml
+++ b/project/app/src/main/res/layout/post_item.xml
@@ -37,6 +37,6 @@
                 android:layout_height="wrap_content"
                 android:text="Share" />
 
-        </LinearLayou>
+        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
