--- a/project/app/src/main/res/layout/activity_chat_nav.xml
+++ b/project/app/src/main/res/layout/activity_chat_nav.xml
@@ -14,6 +14,7 @@
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
         app:layout_constraintTop_toTopOf="parent"
+        app:title="friend name"
         tools:layout_editor_absoluteX="0dp" />
 
     <LinearLayout
