--- a/project/app/src/main/res/layout/fragment_map_setting.xml
+++ b/project/app/src/main/res/layout/fragment_map_setting.xml
@@ -15,13 +15,12 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_map_setting" />
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
+        android:id="@+id/toolbar_map_setting"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:background="#3872AA"
@@ -31,7 +30,7 @@
         tools:layout_editor_absoluteX="0dp" />
 
     <LinearLayout
-        android:id="@+id/linearLayout"
+        android:id="@+id/linearLayout_map_setting"
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:background="#707070"
@@ -40,7 +39,7 @@
         app:layout_editor_absoluteX="0dp">
 
         <Button
-            android:id="@+id/btn_back_allpost_setting"
+            android:id="@+id/btn_back_map"
             style="android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -48,5 +47,14 @@
             android:background="#707070"
             android:text="Back" />
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Map"
+        android:textSize="18sp"
+        tools:layout_editor_absoluteX="29dp"
+        tools:layout_editor_absoluteY="20dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
