--- a/project/app/src/main/res/layout/activity_channel.xml
+++ b/project/app/src/main/res/layout/activity_channel.xml
@@ -45,6 +45,7 @@
             android:layout_height="90dp"
             android:layout_weight="1"
             android:text="Channel 1 "
+            android:onClick="toPost"
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="116dp" />
 
@@ -184,6 +185,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="#707070"
+            android:onClick="toFriendlist"
             android:text="Friends" />
 
         <Button
@@ -193,6 +195,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="#707070"
+            android:onClick="toChannel"
             android:text="Channel" />
 
         <Button
@@ -202,6 +205,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="#707070"
+            android:onClick="toSetting"
             android:text="Setting" />
     </LinearLayout>
 
