--- a/project/app/src/main/res/layout/activity_new_post.xml
+++ b/project/app/src/main/res/layout/activity_new_post.xml
@@ -20,38 +20,51 @@
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="70dp"
+        android:layout_marginTop="20px"
         android:gravity="center"
         android:textStyle="bold"
         android:textSize="40sp"
         android:text="New Channel"
-        tools:layout_editor_absoluteX="150dp"
-        tools:layout_editor_absoluteY="75dp" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
 
-    <EditText
-        android:id="@+id/txt_password_modify"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/linearLayout4"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="99dp"
-        android:ems="10"
-        android:hint="Title"
-        android:inputType="textPassword"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_username_modify"
-        tools:layout_editor_absoluteY="180dp" />
+        android:layout_marginTop="50dp"
+        android:orientation="horizontal"
+        android:gravity="center"
+        app:layout_constraintTop_toBottomOf="@+id/title">
+        <EditText
+            android:id="@+id/post_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Title"
+            android:inputType="textPassword"
+            tools:layout_editor_absoluteY="180dp" />
+    </LinearLayout>
 
-    <EditText
-        android:id="@+id/txt_password_modify"
-        android:layout_width="wrap_content"
-        android:layout_height="200dp"
-        android:layout_marginStart="99dp"
-        android:ems="10"
-        android:hint="Content"
-        android:inputType="textPassword"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_username_modify"
-        tools:layout_editor_absoluteY="250dp" />
-
+    <LinearLayout
+        android:id="@+id/linearLayout5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:orientation="horizontal"
+        android:gravity="center"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">
+        <EditText
+            android:id="@+id/post_content"
+            android:layout_width="wrap_content"
+            android:layout_height="200dp"
+            android:ems="10"
+            android:hint="Content"
+            android:inputType="textPassword"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txt_username_modify"
+            tools:layout_editor_absoluteY="250dp" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
