--- a/project/app/src/main/res/layout/activity_post.xml
+++ b/project/app/src/main/res/layout/activity_post.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".channel">
+    tools:context=".post">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -16,28 +16,23 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="0dp" />
 
-    <TextView
-        android:id="@+id/textView"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:gravity="center"
-        android:textStyle="bold"
-        android:textSize="40sp"
-        android:text="Post"
-        tools:layout_editor_absoluteX="150dp"
-        tools:layout_editor_absoluteY="75dp" />
+        android:layout_height="match_parent"
+        android:layout_marginTop="60dp"
+        android:layout_marginBottom="80dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.6">
 
-    <ListView
-        android:id="@+id/post_list"
-        android:layout_width="match_parent"
-        android:layout_height="500dp"
-        tools:layout_editor_absoluteY="150dp"
-        android:layout_margin="5dp"
-        android:dividerHeight="1dp" />
+        <ListView
+            android:id="@+id/item"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-
-
-
+        </ListView>
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -48,25 +43,34 @@
         app:layout_editor_absoluteX="0dp">
 
         <Button
-            android:id="@+id/back"
+            android:id="@+id/friendlist"
             style="android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="#707070"
-            android:onClick="toBack"
-            android:text="Back" />
+            android:onClick="toFriendlist"
+            android:text="Friends" />
 
         <Button
-            android:id="@+id/new_post"
+            android:id="@+id/channel"
             style="android:attr/buttonBarButtonStyle"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="#707070"
-            android:onClick="toNewPost"
-            android:text="New Post" />
-    </LinearLayout>
+            android:onClick="toChannel"
+            android:text="Channel" />
 
+        <Button
+            android:id="@+id/setting"
+            style="android:attr/buttonBarButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="#707070"
+            android:onClick="toSetting"
+            android:text="Setting" />
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
