in the step,pls ignore this

--- a/project/app/src/main/res/layout/fragment_modify.xml
+++ b/project/app/src/main/res/layout/fragment_modify.xml
@@ -44,6 +44,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:onClick="onClickStoreData_setting"
             android:background="#707070"
             android:text="submit" />
     </LinearLayout>
