--- a/project/app/src/main/res/layout/fragment_setting.xml
+++ b/project/app/src/main/res/layout/fragment_setting.xml
@@ -12,11 +12,11 @@
         android:layout_width="115dp"
         android:layout_height="34dp"
         android:layout_marginStart="72dp"
-        android:layout_marginTop="27dp"
+        android:layout_marginTop="26dp"
         android:text="Age:"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_phone3" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_gender" />
 
     <TextView
         android:id="@+id/dis_age"
@@ -39,7 +39,7 @@
         app:layout_constraintTop_toBottomOf="@+id/dis_phone" />
 
     <TextView
-        android:id="@+id/txt_phone3"
+        android:id="@+id/txt_gender"
         android:layout_width="115dp"
         android:layout_height="34dp"
         android:layout_marginStart="72dp"
@@ -177,12 +177,11 @@
         android:id="@+id/btn_modify"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="163dp"
+        android:layout_marginTop="372dp"
         android:text="modify"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_age" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_setting" />
 
     <Button
         android:id="@+id/btn_allpost_setting"
