--- a/project/app/src/main/res/menu/toolbar_friendlist.xml
+++ b/project/app/src/main/res/menu/toolbar_friendlist.xml
@@ -5,6 +5,7 @@
     <item
         android:title="Map"
         android:id="@+id/friend_map"
+        android:icon="@drawable/icon_map"
         app:showAsAction="ifRoom"
         />
 </menu>
