--- a/project/app/src/main/res/layout/activity_friendlist.xml
+++ b/project/app/src/main/res/layout/activity_friendlist.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:background="#3872AA"
+        app:title="Friendlist"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
         app:layout_constraintTop_toTopOf="parent"
